--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         loadFileDialog.cpp
         loadFileDialog.h
         manageprojects.h manageprojects.cpp
+        kinematics.h kinematics.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AutoViz APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
